--- a/index.html
+++ b/index.html
@@ -105,7 +105,11 @@
       </a>
       
 
-
+     <!-- GitHub Kyle-->
+      <a href="https://linux-edu.github.io/Kyle-Resume/" target="_blank" class="card">
+        <i class="fab fa-github"></i>
+        <span class="label">Kyle</span>
+      </a>
 
 
       <!-- GitHub A & E Honey-->
