--- a/index.html
+++ b/index.html
@@ -38,8 +38,6 @@
   <span class="label">ChatGPT</span>
 </a>
 
-
-
 <a href="https://chat.deepseek.com/" target="_blank" class="card">
   <svg role="img" viewBox="0 0 24 24" width="40" height="40" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
     <title>DeepSeek</title>
@@ -51,8 +49,6 @@
   <span class="label">DeepSeek</span>
 </a>
 
-
-
 <a href="https://grok.com" target="_blank" class="card">
   <svg role="img" viewBox="0 0 24 24" width="40" height="40" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
     <title>Grok</title>
@@ -60,10 +56,6 @@
   </svg>
   <span class="label">Grok</span>
 </a>
-
-
-
-
 
 <a href="https://gemini.google.com" target="_blank" class="card">
   <svg role="img" viewBox="0 0 24 24" width="40" height="40" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
@@ -85,37 +77,22 @@
         <span class="label">Bloom</span>
       </a>
 
-
-
-
     <!-- GitHub Post-->
       <a href="https://linux-edu.github.io/Post/" target="_blank" class="card">
         <i class="fab fa-github"></i>
         <span class="label">Post</span>
       </a>
 
-
-
-
-
-     <!-- GitHub Kyle-->
-      <a href="https://bytebop.github.io/cv/" target="_blank" class="card">
-        <i class="fab fa-github"></i>
-        <span class="label">Kyle</span>
-      </a>
-      
-
-     <!-- GitHub Kyle-->
+     <!-- GitHub Kyle New-->
       <a href="https://linux-edu.github.io/Kyle-Resume/" target="_blank" class="card">
         <i class="fab fa-github"></i>
-        <span class="label">Kyle</span>
+        <span class="label">Kyle New</span>
       </a>
 
-
-      <!-- GitHub A & E Honey-->
-      <a href="https://linux-edu.github.io/A-E/" target="_blank" class="card">
+     <!-- GitHub Kyle Old-->
+      <a href="https://bytebop.github.io/cv/" target="_blank" class="card">
         <i class="fab fa-github"></i>
-        <span class="label">A & E</span>
+        <span class="label">Kyle Old</span>
       </a>
 
       <!-- Facebook -->
