--- a/index.html
+++ b/index.html
@@ -135,6 +135,12 @@
         <span class="label">Instagram</span>
       </a>
 
+      <!-- LocalXpose -->
+      <a href="https://localxpose.io/dashboard" target="_blank" class="card">
+        <i class="fab fa-loclxpose"></i>
+        <span class="label">LocalXpose</span>
+      </a>
+      
       <!-- Google -->
       <a href="https://google.com" target="_blank" class="card">
         <i class="fab fa-google"></i>
