--- a/index.html
+++ b/index.html
@@ -95,10 +95,10 @@
         <span class="label">Kyle Old</span>
       </a>
 
-      <!-- Facebook -->
-      <a href="https://facebook.com" target="_blank" class="card">
-        <i class="fab fa-facebook"></i>
-        <span class="label">Facebook</span>
+      <!-- WhatsApp -->
+      <a href="https://web.whatsapp.com" target="_blank" class="card">
+        <i class="fab fa-whatsapp"></i>
+        <span class="label">WhatsApp</span>
       </a>
 
       <!-- Gmail -->
@@ -123,10 +123,22 @@
         <span class="label">Proton Mail</span>
       </a>
 
-      <!-- WhatsApp -->
-      <a href="https://web.whatsapp.com" target="_blank" class="card">
-        <i class="fab fa-whatsapp"></i>
-        <span class="label">WhatsApp</span>
+      <!-- LocalXpose Help -->
+      <a href="https://localxpose.io/docs#start-your-first-tunnel" target="_blank" class="card">
+        <i class="fab fa-facebook"></i>
+        <span class="label">LoclX Help</span>
+      </a>
+
+      <!-- LocalXpose Dash -->
+      <a href="https://localxpose.io/dashboard/access" target="_blank" class="card">
+        <i class="fab fa-facebook"></i>
+        <span class="label">LoclXDash</span>
+      </a>
+      
+      <!-- Facebook -->
+      <a href="https://facebook.com" target="_blank" class="card">
+        <i class="fab fa-facebook"></i>
+        <span class="label">Facebook</span>
       </a>
 
       <!-- Instagram -->
