--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
                 <span class="label">Bloom</span>
             </a>
 
-            <a href="https://linux-edu.github.io/Post/" target="_blank" class="card" data-name="Post">
+            <a href="https://linux-edu.github.io/Poster/" target="_blank" class="card" data-name="Poster">
                 <i class="fab fa-github"></i>
-                <span class="label">Post</span>
+                <span class="label">Poster</span>
             </a>
 
             <a href="https://linux-edu.github.io/Kyle-Resume/" target="_blank" class="card" data-name="Kyle">
