--- a/index.html
+++ b/index.html
@@ -30,6 +30,13 @@
 
         <div class="dashboard">
 <!----------------------------------->
+            <div class="category-title">Analytics</div>
+
+            <a href="https://analytics.google.com" target="_blank" class="card" data-name="analytics">
+                <i class="fas fa-graph"></i>
+                <span class="label">Analytics</span>
+            </a>
+<!----------------------------------->
             <div class="category-title">Post Box</div>
 
             <a href="https://gmail.com" target="_blank" class="card" data-name="gmail">
@@ -37,7 +44,7 @@
                 <span class="label">Gmail</span>
             </a>
 
-            <a href="https://proton.me" target="_blank" class="card" data-name="Proton Mail">
+            <a href="https://proton.me" target="_blank" class="card" data-name="proton mail">
                 <i class="fas fa-shield-alt"></i>
                 <span class="label">Proton Mail</span>
             </a>
@@ -45,21 +52,21 @@
 <!----------------------------------->
             <div class="category-title">A.I.</div>
            
-            <a href="https://chatgpt.com/" target="_blank" class="card" data-name="ChatGpt">
+            <a href="https://chatgpt.com/" target="_blank" class="card" data-name="chatgpt">
                 <i class="fas fa-brain"></i>
                 <span class="label">ChatGpt</span>
             </a>
-            <a href="https://chat.deepseek.com" target="_blank" class="card" data-name="Deepseek">
+            <a href="https://chat.deepseek.com" target="_blank" class="card" data-name="deepseek">
                 <i class="fas fa-robot"></i>
                 <span class="label">Deepseek</span>
             </a>
 
-            <a href="https://grok.com" target="_blank" class="card" data-name="Grok">
+            <a href="https://grok.com" target="_blank" class="card" data-name="grok">
                 <i class="fas fa-microchip"></i>
                 <span class="label">Grok</span>
             </a>
 
-            <a href="https://gemini.google.com" target="_blank" class="card" data-name="Gemini">
+            <a href="https://gemini.google.com" target="_blank" class="card" data-name="gemini">
                 <i class="fas fa-code"></i>
                 <span class="label">Gemini</span>
             </a>
