--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class="category-title">Analytics</div>
 
             <a href="https://analytics.google.com" target="_blank" class="card" data-name="analytics">
-                <i class="fas fa-graph"></i>
+                <i class="fas fa-bar-chart"></i>
                 <span class="label">Analytics</span>
             </a>
 <!----------------------------------->
