--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
             <div class="category-title">Analytics</div>
 
             <a href="https://analytics.google.com" target="_blank" class="card" data-name="analytics">
-                <!--i class="fas fa-bar-chart"></i--><i class="fa fa-bar-chart" aria-hidden="true"></i>
-
+                <i class="fa fa-line-chart" aria-hidden="true"></i>
                 <span class="label">Analytics</span>
             </a>
 <!----------------------------------->
