--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 <!----------------------------------->
             <div class="category-title">GitHub</div>
 
-            <a href="https://github.com/linux-edu" target="_blank" class="card" data-name="linux-edu">
+            <a href="https://github.com/dashboard" target="_blank" class="card" data-name="linux-edu">
                 <i class="fab fa-github"></i>
                 <span class="label">linux-edu</span>
             </a>
