--- a/index.html
+++ b/index.html
@@ -45,6 +45,12 @@
                 <i class="fa fa-line-chart" aria-hidden="true"></i>
                 <span class="label">Analytics</span>
             </a>
+https://plausible.io/
+            <a href="https://plausible.io/" target="_blank" class="card" data-name="plausible">
+                <i class="fa fa-line-chart" aria-hidden="true"></i>
+                <span class="label">Plausible</span>
+            </a>
+            
 <!----------------------------------->
             <div class="category-title">Post Box</div>
 
