--- a/index.html
+++ b/index.html
@@ -93,6 +93,12 @@ https://plausible.io/
                 <span class="label">linux-edu</span>
             </a>
 
+            <a href="https://linux-edu.github.io/html" target="_blank" class="card" data-name="home">
+                <i class="fab fa-github"></i>
+                <span class="label">Home</span>
+            </a>
+
+            
             <a href="https://linux-edu.github.io/Bloom/" target="_blank" class="card" data-name="Bloom">
                 <i class="fab fa-github"></i>
                 <span class="label">Bloom</span>
