--- a/index.html
+++ b/index.html
@@ -223,7 +223,98 @@
                 <span class="label">Dropbox</span>
             </a>
 
+            <a href="https://www.freepik.com/" target="_blank" class="card" data-name="freepik">
+                <i class="fab fa-dropbox"></i>
+                <span class="label">Freepik</span>
+            </a>
 
+            <a href="https://www.visualmind.app/" target="_blank" class="card" data-name="visualmind">
+                <i class="fab fa-dropbox"></i>
+                <span class="label">Visual Mind</span>
+            </a>
+
+            <a href="https://temp-mail.org/" target="_blank" class="card" data-name="tempmail">
+                <i class="fab fa-dropbox"></i>
+                <span class="label">Temp Mail</span>
+            </a>
+
+            <a href="https://www.opensourcealternative.to" target="_blank" class="card" data-name="opesourcealt">
+                <i class="fab fa-dropbox"></i>
+                <span class="label">Open Source Alt</span>
+            </a>
+
+            <a href="https://business.google.com" target="_blank" class="card" data-name="busgoogle">
+                <i class="fab fa-dropbox"></i>
+                <span class="label">Business Google</span>
+            </a>
+
+            <a href="https://ww1.goojara.to" target="_blank" class="card" data-name="goojara">
+                <i class="fab fa-dropbox"></i>
+                <span class="label">Goojara Movies</span>
+            </a>
+
+            <a href="https://moviesaz.fun" target="_blank" class="card" data-name="moviesaz">
+                <i class="fab fa-dropbox"></i>
+                <span class="label">Movie Saz</span>
+            </a>
+
+            <a href="https://themoviehub.org" target="_blank" class="card" data-name="moviehub">
+                <i class="fab fa-dropbox"></i>
+                <span class="label">123 Movies</span>
+            </a>
+
+            <a href="https://gamekillerapp.com" target="_blank" class="card" data-name="gamekiller">
+                <i class="fab fa-dropbox"></i>
+                <span class="label">Game Killer</span>
+            </a>
+
+            <a href="https://www.design.com" target="_blank" class="card" data-name="design">
+                <i class="fab fa-dropbox"></i>
+                <span class="label">Logo Maker</span>
+            </a>
+
+            <a href="https://localhost.run" target="_blank" class="card" data-name="localhost">
+                <i class="fab fa-dropbox"></i>
+                <span class="label">Localhost Tunnel</span>
+            </a>
+
+            <a href="https://www.amazon.com" target="_blank" class="card" data-name="amazonmovies">
+                <i class="fab fa-dropbox"></i>
+                <span class="label">Amazon Movies</span>
+            </a>
+
+            <a href="https://hackercheck.io" target="_blank" class="card" data-name="hackercheck">
+                <i class="fab fa-dropbox"></i>
+                <span class="label">Hacker Check</span>
+            </a>
+
+            <a href="https://looka.com" target="_blank" class="card" data-name="looka">
+                <i class="fab fa-dropbox"></i>
+                <span class="label">Logo Maker</span>
+            </a>
+
+            <a href="https://tinywow.com" target="_blank" class="card" data-name="tinywow">
+                <i class="fab fa-dropbox"></i>
+                <span class="label">Tinywow Tool</span>
+            </a>
+
+            <a href="https://temp-mail.org/" target="_blank" class="card" data-name="tempmail">
+                <i class="fab fa-dropbox"></i>
+                <span class="label">Temp Mail</span>
+            </a>
+
+            <a href="https://www.tealhq.com" target="_blank" class="card" data-name="tealhq">
+                <i class="fab fa-dropbox"></i>
+                <span class="label">CV Maker</span>
+            </a>
+
+            <a href="https://temp-mail.org/" target="_blank" class="card" data-name="tempmail">
+                <i class="fab fa-dropbox"></i>
+                <span class="label">Temp Mail</span>
+            </a>
+
+
+            
 
             <div class="category-title">Shopping</div>
             <a href="https://amazon.com" target="_blank" class="card" data-name="amazon">
